--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,30 +16,57 @@
 
   {% seo %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#157878">
+  <meta name="theme-color" content="#282828">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
 
 <body>
   <header class="page-header" role="banner">
-    <div class="app-icon-container"><img class="app-icon"
-        src="https://github.com/niklas-8/RemoteFiles/blob/master/assets/app_icon.png?raw=true">
-    </div>
+    <img class="app-icon" src="https://github.com/niklas-8/RemoteFiles/blob/master/assets/app_icon_bg.png?raw=true">
     <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-    <h2 class="project-tagline">
-      {{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+    <h2 class="project-tagline first">The modern SFTP client for Android and iOS</h2>
+    <h2 class="project-tagline">Version 0.0.1 [Alpha]</h2>
     {% if site.github.is_project_page %}
     <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
     {% endif %}
     {% if site.show_downloads %}
-    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+    <a href="https://github.com/niklas-8/RemoteFiles/releases/download/v0.0.1-alpha/remotefiles-v0.0.1-alpha.apk"
+      class="btn">Download .apk</a>
+    <a class="btn">Google PlayStore (not yet available)</a>
     {% endif %}
   </header>
 
   <main id="content" class="main-content" role="main">
-    {{ content }}
+    <div class="info-container">
+      <h2>Free, open source, in active development.</h2>
+      <p>Written with <a href="https://flutter.dev">Flutter</a> in the <a href="https://dart.dev">Dart</a> programming
+        language, RemoteFiles is free and open-sourced under the GNU
+        General Public License v3.0. Please feel free to contribute it by opening an issue, sending a feature
+        request or a bug report on GitHub.</p>
+    </div>
+
+    <h2>Screenshots</h2>
+    <div class="screenshot-container">
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/1.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/2.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/3.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/4.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/5.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/6.jpg?raw=true" width="280px" />
+      </div>
+    </div>
   </main>
 </body>
 
