update github page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
   {% seo %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#282828">
+  <meta name="theme-color" content="#303030">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 </head>
@@ -33,7 +33,7 @@
     {% if site.show_downloads %}
     <a href="https://github.com/niklas-8/RemoteFiles/releases/download/v0.0.1-alpha/remotefiles-v0.0.1-alpha.apk"
       class="btn">Download .apk</a>
-    <a class="btn">Google PlayStore (not yet available)</a>
+    <a class="btn not-available">Google PlayStore (not yet available)</a>
     {% endif %}
   </header>
 
