change title of github page website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 
 <head>
 
+  <title>Remote Files | The modern SFTP client for Android and iOS</title>
+
   {% if site.google_analytics %}
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
   <script>
