--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,15 @@
       <div>
         <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/6.jpg?raw=true" width="280px" />
       </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/7.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/8.jpg?raw=true" width="280px" />
+      </div>
+      <div>
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/9.jpg?raw=true" width="280px" />
+      </div>
     </div>
   </main>
 </body>
