--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -4,7 +4,7 @@
     <item android:drawable="@android:color/white" />
 
     <!-- You can insert your own image assets here -->
-    <item>
-        <bitmap android:gravity="center" android:src="@mipmap/ic_launcher" />
-    </item>
+    <!-- <item> -->
+        <!-- <bitmap android:gravity="center" android:src="@mipmap/ic_launcher" /> -->
+    <!-- </item> -->
 </layer-list>
