--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,31 +87,22 @@
     <h2>Screenshots</h2>
     <div class="screenshot-container">
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/1.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/1.jpg?raw=true" width="280px" />
       </div>
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/2.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/2.jpg?raw=true" width="280px" />
       </div>
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/3.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/3.jpg?raw=true" width="280px" />
       </div>
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/4.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/4.jpg?raw=true" width="280px" />
       </div>
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/5.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/5.jpg?raw=true" width="280px" />
       </div>
       <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/6.png?raw=true" width="280px" />
-      </div>
-      <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/7.png?raw=true" width="280px" />
-      </div>
-      <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/8.png?raw=true" width="280px" />
-      </div>
-      <div>
-        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/9.png?raw=true" width="280px" />
+        <img src="https://github.com/niklas-8/RemoteFiles/blob/master/screenshots/6.jpg?raw=true" width="280px" />
       </div>
     </div>
   </main>
