--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/splash_screen_background" />
+    <item android:drawable="@android:color/white" />
     <!-- You can insert your own image assets here -->
     <!-- <item> -->
         <!-- <bitmap android:gravity="center" android:src="@mipmap/ic_launcher" /> -->
